fixed jumping image on chrome mobile

--- a/stamptax.sass
+++ b/stamptax.sass
@@ -253,7 +253,7 @@ h1
 	background-position: 57%
 	background-size: cover
 	background-repeat: no-repeat
-	height: 90vh
+	height: 90%
 	position: relative
 
 .firstPage-text
